# Rutgers-Bert-T5-GPT2

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: predictions.csv
src/bert/: config.py  run.py
src/bert/dataset/: custom_dataset.py
src/bert/eval/: train_eval_epoch.py
src/bert/model/: bert.py
src/bert/utils/: processing.py
src/gpt2/: config.py  data.py  helpers.py  model.py  run.py  utils.py
src/gpt2/dataset/: custom_dataset.py
src/gpt2/eval/: generate.py  train_eval_epoch.py
src/rutgers_nlp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/t5/: config.py  run.py
src/t5/dataset/: custom_dataset.py
src/t5/evaluate/: eval.py
src/t5/train/: epochs.py  run.py  trainer.py
src/tfid/utils/: preprocessing.py
tests/: conftest.py  test_bert_dataset.py  test_bert_model.py  test_bert_processing.py  test_gpt2_data.py  test_t5_dataset.py  test_t5_eval.py
