[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rutgers-nlp"
version = "0.1.0"
description = "BERT, T5, and GPT-2 fine-tuning on news headlines"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "rouge-score>=0.1",
    "nltk>=3.8",
    "textblob>=0.18",
    "contractions>=0.1",
    "rich>=13.0",
    "sentencepiece>=0.1",
    "safetensors>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
